--- a/package.json
+++ b/package.json
@@ -1,15 +1,1 @@
-
-{ 
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-
-  "dependencies": {
-    "next": "^14.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  }
-}
+{"scripts":{"dev":"next dev","build":"next build","start":"next start","lint":"next lint"},"dependencies":{"next":"^14.2.5","react":"^18.3.1","react-dnd":"^16.0.1","react-dnd-html5-backend":"^16.0.1","react-dom":"^18.3.1"}}
